# workflow

./: CMakeLists.txt  README.md
ai/: CMakeLists.txt
ai/src/: game_types.py  main.py  network.py  protocol.py  zappy_ai.py
graphical/: CMakeLists.txt
graphical/asset/: team_colors.txt
graphical/lib/: Client_network.hpp  Core.hpp  GameState.hpp  GuiMediator.hpp  IGUI.hpp  Renderer.hpp  Zappy3DRenderer.hpp  ZappyAbstractGUI.hpp  ZappyGUI.hpp  window.hpp
graphical/src/: Client_network.cpp  Core.cpp  GameState.cpp  GuiMediator.cpp  Main.cpp  Renderer.cpp  Window.cpp  Zappy3DRenderer.cpp  ZappyAbstractGUI.cpp  ZappyGUI.cpp
server/: CMakeLists.txt
server/include/: cleanup_utils.h  command_broadcast.h  command_handlers.h  look_direction_utils.h  map_parameters.h  message_protocol.h  move_player.h  player.h  player_utils.h  resource_utils.h  ressources.h  server.h  server_network.h  server_signal.h  spatial_utils.h
server/src/commands/: command_broadcast.c  command_connect_nbr.c  command_death.c  command_eject.c  command_elevation.c  command_handlers.c  command_inventory.c  command_look.c  command_move.c  command_queue.c  command_set_object.c  command_take_object.c  elevation_actions.c  elevation_checks.c  message_processing.c  move_player.c  set_handlers.c  set_handlers_bis.c  take_handlers.c  take_handlers_bis.c
server/src/config/: args_error_handling.c  argument_parsing.c
server/src/core/: main.c  server_core.c  server_network_setup.c  server_shutdown.c  signal_handling.c
server/src/network/: client_broadcast.c  client_communication.c  event_polling.c  network_management.c
server/src/utils/: cleanup_utils.c  look_utils.c  network_utils.c  player_utils.c  resource_utils.c  ressources_utils.c  spatial_utils.c
server/src/world/: food_consumption.c  player_management.c  spatial_management.c  world_creation.c  world_ressources.c  world_ressources_bis.c  world_ressources_three.c
